sliders v_2 with navigation dots

--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
 												<img src="img/slider/paprika.jpg" alt="paprika">
 										</div>
 									</div>
-                </div>
+								</div>
+								<div class="container-dots">
+								</div>
             </div>
         </div>
     </div>
